HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportGeneric/Expected.uv
//! Expected diagnostic metadata for the HostExportGeneric rejected-source specimen.

expectedDiagnostic("E-TYP-2634", "rule.23.HostExport-Generic-Err")
